Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-1693

Authproxy doesn't compile on FreeBSD

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 3.3.1
    • Plugins
    • None

    Description

      Output from gmake (GCC 4.2.1):
      CXX authproxy.lo
      authproxy.cc: In function 'bool AuthWriteRedirectedRequest(AuthRequestContext*, const sockaddr*)':
      authproxy.cc:331: error: 'snprintf' is not a member of 'std'
      authproxy.cc:333: error: 'snprintf' is not a member of 'std'
      gmake: *** [authproxy.lo] Error 1

      Attachments

        Activity

          People

            humbedooh Daniel Gruno
            humbedooh Daniel Gruno
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: