TS-1693: Authproxy doesn't compile on FreeBSD

If we move out of the std:: namespace, everything seems to work just fine.
Question is whether this will also work on non-bsd, the buildbots
will know!